--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,9 +16,12 @@
     "@mui/material": "^6.1.5",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
