--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers-pro": "^7.23.1",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
